# SmashZone

./: .gitignore  CREDITS.md  Cargo.toml  Dockerfile  README.md  fly.toml
.claude/: launch.json
.claude/skills/verify/: SKILL.md
.github/workflows/: ci.yml
ci/: github-actions-ci.yml
client/: bunfig.toml  index.html  package-lock.json  package.json  svelte.config.js  tsconfig.json  vite.config.ts
client/e2e/: run.ts  setup.ts  tsconfig.json
client/e2e/helpers/: browser.ts  game.ts  http.ts  replay.ts
client/e2e/specs/: 00-http.spec.ts  01-menu.spec.ts  02-lobby.spec.ts  03-matchflow.spec.ts  04-movement.spec.ts  05-combat.spec.ts  06-arena-pickups.spec.ts  07-hud-render.spec.ts  08-spectate.spec.ts  09-reconnect.spec.ts  10-touch-quality.spec.ts  11-replay-record.spec.ts  12-replay-playback.spec.ts  13-replay-export.spec.ts  14-replay-store.spec.ts  zz-restart.spec.ts
client/src/: env.d.ts  main.ts
client/src/game/: audio.ts  effects.ts  eventfx.ts  floaters.ts  input.ts  interp.ts  juice.ts  players.ts  quality.ts  renderer.ts  touch.ts
client/src/net/: connection.ts  gameclient.ts  messages.ts
client/src/replay/: bitstream.ts  cameras.ts  dataset.ts  download.ts  export.ts  ffmpeg.ts  format.ts  player.ts  recorder.ts  replayui.ts  store.ts  wav.ts
client/src/ui/: icons.ts  style.css  theme.css  ui.ts  (+1 more)
crates/gameserver/: Cargo.toml  build.rs
crates/gameserver/src/: bot.rs  main.rs  net.rs  room.rs
crates/protocol/: Cargo.toml
crates/sim/: Cargo.toml
crates/sim-wasm/: Cargo.toml
crates/sim-wasm/src/: lib.rs
shared/: constants.json
(+25 files in other folders)
