[workspace]
resolver = "2"
members = [
    "crates/sim",
    "crates/protocol",
    "crates/sim-wasm",
    "crates/gameserver",
]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
rapier3d = { version = "0.22", features = ["enhanced-determinism"] }
nalgebra = "0.33"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
postcard = { version = "1", features = ["use-std"] }

# Optimize physics even in dev builds; unoptimized Rapier is painfully slow.
[profile.dev.package.rapier3d]
opt-level = 3
[profile.dev.package.parry3d]
opt-level = 3
[profile.dev.package.nalgebra]
opt-level = 3

[profile.release]
lto = "thin"
