[package]
name = "gameserver"
version.workspace = true
edition.workspace = true

[dependencies]
sim = { path = "../sim" }
protocol = { path = "../protocol" }
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
dashmap = "6"
rand = "0.9"
serde.workspace = true
serde_json.workspace = true
futures-util = "0.3"
