[package]
name = "sim-wasm"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
sim = { path = "../sim" }
protocol = { path = "../protocol" }
wasm-bindgen = "0.2"
serde-wasm-bindgen = "0.6"
serde.workspace = true

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
